--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header{
 
     margin: 0;
 
-    /* View Height is a neato value! I want the image to take up your entire viewport, so instead of using %, vh makes the most sense */
-    height: 100vh;
+    /* View Height is a neato value! I want the image to take up most of your entire viewport, so instead of using %, vh makes the most sense */
+    height: 75vh;
     background-image: url(kristoff-traintracks-unsplash-header.jpg);
     background-color: rgba(black, .2);
     background-position: center center;
