Fixed header styling and breakpoint issues

--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ header{
         flex-direction: column;
         justify-content: center;
     }
+
+    .top-header{
+        padding-top: 2em;
+    }
+    
 }
 
 #headshot{
