--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 
     line-height: 1.4;
-    
 }
 
 header{
@@ -33,7 +32,7 @@ header{
 
     margin: 0;
 
-    /* View Height is a neato value! I want the image to take up most of your entire viewport, so instead of using %, vh makes the most sense */
+    /* View Height is a neato value! I want the image to take up most of your entire viewport, so instead of using %, vh makes sense */
     min-height: 75vh;
     background-image: url(img/kristoff-traintracks-unsplash-header.jpg);
     background-color: rgba(black, .2);
@@ -85,16 +84,26 @@ header{
 }
 
 .flex-container{
+    padding: 0;
+    margin: 0;
     display: flex;
-    flex-flow: row;
-    justify-content: space-around;
-    align-content: space-around;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.flex-element{
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 @media all and (max-width: 600px) {
     .flex-container{
         flex-direction: column;
-        justify-content: center;
+    }
+
+    .flex-element{
+        width: 100%;
     }
 
     .top-header{
@@ -132,8 +141,11 @@ header{
 }
 
 .project-card{
-    display: block;
     border: 4px solid var(--secondary);
+
+    padding: 1em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .project-card.highlight{
