--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ header{
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
-    max-width: 50rem;
+    max-width: 60rem;
 }
 
 .flex-container{
@@ -154,7 +154,7 @@ header{
 
 .project-card{
     border: 4px solid var(--secondary);
-    padding: 0.5em;
+    padding: 0 0.5em 0.25em 0.5em;
     width: calc(50% - 1em);
     margin-bottom: 1em;
 }
